Create Email object and Author object

--- a/GmailNotifier/NotifyForm.resx
+++ b/GmailNotifier/NotifyForm.resx
@@ -120,41 +120,41 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAGfSURBVFhH7VXJccMwDGRP7kmlqAc1kDr8zriElJBH/nkwWBCkSRCgKFsz+Whn1uTIJHZxyA4X
-        Liy3GG+K2xbj4zvSR1rf3T9orzVA1wAIE2fAEweHBsBlkSgvAklYcTN3DYBsgrI4Ctyz4tU0DViG8Iz7
-        OgMya4lbcW0DdNlzj36OAJNmAohptMM1EH9/3P55w+kNG59HPCMp3wBAl7yg5YxgaJbieAn5BnBJMCor
-        gLX7jsjtquL057adCmSgEjBhCFlkcQxsJQ4cq4AGghH3TPBdJcxo7m7l/LyBjIEJV1zw8gzUQGk/PvuJ
-        RnCQS++gr8DsDAA0UBAug0XMb0g9bNjjnPXL2ZpOJqYM5Ky77MRIFs8o52sTdKavwJ4ByaYJdAC6GmkG
-        nuLDFoxKeQR19UoFAkyMWkDkrFVpD0G3heI9WwDuGCgBZlZrD6jnycAze6MF6QuegRxshpVIs1dE3BBa
-        LWUgccH/JpWM2y+t4DfgzXVdV9HoKiAPeDhSBe5fd+7bWSsMNC0QLTagXcEQ3J5NTlSEsxYbuHDhfxHC
-        HzwhyQhAfP0IAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAZ9JREFUWEft
+        VclxwzAMZE/uSaWoBzWQOvzOuISUkEf+eTBYEKRJEKAoWzP5aGfW5MgkdnHIDhcuLLcYb4rbFuPjO9JH
+        Wt/dP2ivNUDXAAgTZ8ATB4cGwGWRKC8CSVhxM3cNgGyCsjgK3LPi1TQNWIbwjPs6AzJriVtxbQN02XOP
+        fo4Ak2YCiGm0wzUQf3/c/nnD6Q0bn0c8IynfAECXvKDljGBoluJ4CfkGcEkwKiuAtfuOyO2q4vTntp0K
+        ZKASMGEIWWRxDGwlDhyrgAaCEfdM8F0lzGjubuX8vIGMgQlXXPDyDNRAaT8++4lGcJBL76CvwOwMADRQ
+        EC6DRcxvSD1s2OOc9cvZmk4mpgzkrLvsxEgWzyjnaxN0pq/AngHJpgl0ALoaaQae4sMWjEp5BHX1SgUC
+        TIxaQOSsVWkPQbeF4j1bAO4YKAFmVmsPqOfJwDN7owXpC56BHGyGlUizV0TcEFotZSBxwf8mlYzbL63g
+        N+DNdV1X0egqIA94OFIF7l937ttZKww0LRAtNqBdwRDcnk1OVISzFhu4cOF/EcIfPCHJCEB8/QgAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAGfSURBVFhH7VXJccMwDGRP7kmlqAc1kDr8zriElJBH/nkwWBCkSRCgKFsz+Whn1uTIJHZxyA4X
-        Liy3GG+K2xbj4zvSR1rf3T9orzVA1wAIE2fAEweHBsBlkSgvAklYcTN3DYBsgrI4Ctyz4tU0DViG8Iz7
-        OgMya4lbcW0DdNlzj36OAJNmAohptMM1EH9/3P55w+kNG59HPCMp3wBAl7yg5YxgaJbieAn5BnBJMCor
-        gLX7jsjtquL057adCmSgEjBhCFlkcQxsJQ4cq4AGghH3TPBdJcxo7m7l/LyBjIEJV1zw8gzUQGk/PvuJ
-        RnCQS++gr8DsDAA0UBAug0XMb0g9bNjjnPXL2ZpOJqYM5Ky77MRIFs8o52sTdKavwJ4ByaYJdAC6GmkG
-        nuLDFoxKeQR19UoFAkyMWkDkrFVpD0G3heI9WwDuGCgBZlZrD6jnycAze6MF6QuegRxshpVIs1dE3BBa
-        LWUgccH/JpWM2y+t4DfgzXVdV9HoKiAPeDhSBe5fd+7bWSsMNC0QLTagXcEQ3J5NTlSEsxYbuHDhfxHC
-        HzwhyQhAfP0IAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAZ9JREFUWEft
+        VclxwzAMZE/uSaWoBzWQOvzOuISUkEf+eTBYEKRJEKAoWzP5aGfW5MgkdnHIDhcuLLcYb4rbFuPjO9JH
+        Wt/dP2ivNUDXAAgTZ8ATB4cGwGWRKC8CSVhxM3cNgGyCsjgK3LPi1TQNWIbwjPs6AzJriVtxbQN02XOP
+        fo4Ak2YCiGm0wzUQf3/c/nnD6Q0bn0c8IynfAECXvKDljGBoluJ4CfkGcEkwKiuAtfuOyO2q4vTntp0K
+        ZKASMGEIWWRxDGwlDhyrgAaCEfdM8F0lzGjubuX8vIGMgQlXXPDyDNRAaT8++4lGcJBL76CvwOwMADRQ
+        EC6DRcxvSD1s2OOc9cvZmk4mpgzkrLvsxEgWzyjnaxN0pq/AngHJpgl0ALoaaQae4sMWjEp5BHX1SgUC
+        TIxaQOSsVWkPQbeF4j1bAO4YKAFmVmsPqOfJwDN7owXpC56BHGyGlUizV0TcEFotZSBxwf8mlYzbL63g
+        N+DNdV1X0egqIA94OFIF7l937ttZKww0LRAtNqBdwRDcnk1OVISzFhu4cOF/EcIfPCHJCEB8/QgAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAGfSURBVFhH7VXJccMwDGRP7kmlqAc1kDr8zriElJBH/nkwWBCkSRCgKFsz+Whn1uTIJHZxyA4X
-        Liy3GG+K2xbj4zvSR1rf3T9orzVA1wAIE2fAEweHBsBlkSgvAklYcTN3DYBsgrI4Ctyz4tU0DViG8Iz7
-        OgMya4lbcW0DdNlzj36OAJNmAohptMM1EH9/3P55w+kNG59HPCMp3wBAl7yg5YxgaJbieAn5BnBJMCor
-        gLX7jsjtquL057adCmSgEjBhCFlkcQxsJQ4cq4AGghH3TPBdJcxo7m7l/LyBjIEJV1zw8gzUQGk/PvuJ
-        RnCQS++gr8DsDAA0UBAug0XMb0g9bNjjnPXL2ZpOJqYM5Ky77MRIFs8o52sTdKavwJ4ByaYJdAC6GmkG
-        nuLDFoxKeQR19UoFAkyMWkDkrFVpD0G3heI9WwDuGCgBZlZrD6jnycAze6MF6QuegRxshpVIs1dE3BBa
-        LWUgccH/JpWM2y+t4DfgzXVdV9HoKiAPeDhSBe5fd+7bWSsMNC0QLTagXcEQ3J5NTlSEsxYbuHDhfxHC
-        HzwhyQhAfP0IAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAZ9JREFUWEft
+        VclxwzAMZE/uSaWoBzWQOvzOuISUkEf+eTBYEKRJEKAoWzP5aGfW5MgkdnHIDhcuLLcYb4rbFuPjO9JH
+        Wt/dP2ivNUDXAAgTZ8ATB4cGwGWRKC8CSVhxM3cNgGyCsjgK3LPi1TQNWIbwjPs6AzJriVtxbQN02XOP
+        fo4Ak2YCiGm0wzUQf3/c/nnD6Q0bn0c8IynfAECXvKDljGBoluJ4CfkGcEkwKiuAtfuOyO2q4vTntp0K
+        ZKASMGEIWWRxDGwlDhyrgAaCEfdM8F0lzGjubuX8vIGMgQlXXPDyDNRAaT8++4lGcJBL76CvwOwMADRQ
+        EC6DRcxvSD1s2OOc9cvZmk4mpgzkrLvsxEgWzyjnaxN0pq/AngHJpgl0ALoaaQae4sMWjEp5BHX1SgUC
+        TIxaQOSsVWkPQbeF4j1bAO4YKAFmVmsPqOfJwDN7owXpC56BHGyGlUizV0TcEFotZSBxwf8mlYzbL63g
+        N+DNdV1X0egqIA94OFIF7l937ttZKww0LRAtNqBdwRDcnk1OVISzFhu4cOF/EcIfPCHJCEB8/QgAAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
